<resources>
    <string name="app_name">RandomOutfitGenerator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_edit_label">My User</string>


    //-------------------Closet----------------
    <string name="menu_closet">My Closet</string>
    <string name="tops">Tops</string>
    <string name="bottoms">Bottoms</string>
    <string name="accessories">Accessories</string>
    <string name="shoes">Shoes</string>
    <string name="full_body">Full Body</string>

    //-------------------Outfits-------------------
    <string name="outfit">My Outfit</string>
    <string name="save_outfit">Save</string>
    <string name="dummy_string">Lorem Ipsum</string>
    <string name="delete_outfit">Delete</string>

    //----------------------Settings---------------
    <string name="menu_settings">Settings</string>
    <string name="settings_profile">Profile</string>

    //--------------------------Home--------------------
    <string name="menu_home">Home</string>
    <string name="home_outfits">Recent Outfits</string>

    //----------------Saved Outfits-------------------
    <string name="menu_saved_outfits">Saved Outfits</string>
    <string name="no_saved_outfits">You have no saved outfits</string>

    //-------------------------Randomization---------------------
    <string name="randomization_title">Customization</string>
    <string name="generate_random">Generate</string>
    <string name="random_full_body_fit">Full Body Outfit</string>
    <string name="randomization_top">Top</string>
    <string name="randomization_bottom">Bottom</string>
    <string name="randomization_full_body">Full Body</string>
    <string name="randomization_shoes">Shoes</string>
    <string name="randomization_accessories">Accessories</string>
    <string name="randomization_styles">Styles</string>
    <string name="randomization_weathers">Weathers</string>
    <string name="random_use_weather">By Weather</string>

    //----------------Clothing Edit---------------
    <string name="clothing_delete">Delete</string>
    <string name="clothing_save">Save</string>
    <string name="clothing_edit">Edit Item</string>

    //--------------Splash Fragment----------------
    <string name="loading_text">Loading...</string>

    //-----------------User Edit-------------------
    <string name="user_edit_name_holder">John Doe</string>
    <string name="login_text">Email: john.doe@rose.com</string>
    <string name="user_edit_tags_label">Tags</string>
    <string name="user_edit_logout">Logout</string>
    <string name="user_edit">Edit</string>
    <string name="tag_label">Tag</string>
    <string name="user_edit_delete">Delete Tags</string>
    <string name="user_edit_add">Add Tag</string>
    <string name="set_default_style">Set Style As Default</string>
    <string name="dummy_tag">tag</string>
    <string name="new_tag_hint">Enter a New Tag</string>

</resources>
